# ablation-harness

./: -remote --tags origin  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  bootstrap.py  pyproject.toml
.github/workflows/: ci.yml
configs/: tiny_cifar.yaml  toy_moons.yaml
docs/prereg/: 2025-10-08-tinycnn-cifar10.md
docs/reports/: .md  loss_and_scree_plots_writeup(1st-attmpt).md  wk1_baseline.md  wk2_adam_sgd_ema_param_sweep.md
experiments/: baseline.yaml  study_test.yaml  study_wk2.yaml  test_bugs.yaml
scripts/: aggregate.py
src/ablation_harness/: ablate.py  ablate_prev.py  builders.py  config_resolve.py  ema.py  jsonl_metric_logger.py  logger.py  plot_ablation.py  plot_loss.py  plot_scree.py  plot_variance.py  plot_walltime.py  seed_utils.py  spectral.py  trainer.py
src/ablation_harness/other_ablates/: ablate_div.py
tests/: conftest.py  test_ablate_smoke.py  test_aggregate.py  test_ema.py  test_jsonl_schema.py  test_logger_smoke.py  test_plot_ablation.py  test_plot_loss.py  test_plot_variance.py  test_plot_walltime.py  test_seed_determinisum.py  test_seed_utils.py  test_trainer.py
whoami/: whoami.py
